--- a/d3dx9math_stub.vcxproj
+++ b/d3dx9math_stub.vcxproj
@@ -123,11 +123,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="d3dx9math_wrapper.cpp" />
+    <ClCompile Include="d3dx9math_stub.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="d3dx9math_wrapper.h" />
+    <ClInclude Include="d3dx9math_stub.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
